<resources>
    <string name="facebook_app_id" translatable="false">0000000000000000</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb0000000000000000</string>
    <string name="admob_banner_ads_key" translatable="false">ca-app-pub-7168378223909401/7621007940</string>
    <string name="google_map_api_key" translatable="false">AIzaSyABCJoE65AD_ujN2Eaw9l6xnOlCiRJMHkw</string>
    <string name="shiprocket_token" translatable="false">eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJzdWIiOjEwOTQxMTIsImlzcyI6Imh0dHBzOi8vYXBpdjIuc2hpcHJvY2tldC5pbi92MS9leHRlcm5hbC9hdXRoL2xvZ2luIiwiaWF0IjoxNjA5NjA2ODIyLCJleHAiOjE2MTA0NzA4MjIsIm5iZiI6MTYwOTYwNjgyMiwianRpIjoiOWVtQ05vVFUwTVZxQ2xPNCJ9.WzFHKR0qw0V5sW315K0a0fZxLD5FM6Iyu00h2Bacy7o.XoChzYPNvywj4NUr1u6-UoRQs-bwifls1uKL7_U9-Eg</string>
    <string name="adview_publisher_key" translatable="false">pub-0000000000000000</string>
    <string name="razor_key" translatable="false">rzp_test_WsEasIH8weUues</string>
    <string name="razor_secretKey" translatable="false">DIwVjODGaOUT1pkyKlYLTBg1</string>
    <string name="razor_createOrder" translatable="false">https://api.razorpay.com/v1/orders</string>
    <string name="razor_createPayout" translatable="false">https://api.razorpay.com/v1/payouts</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="item_detail__meetup" translatable="false">Meetup</string>
    <string name="item_detail__mailing_on_delivery" translatable="false">Mailing On Delivery</string>
    <string name="phone_login_phone_hint" translatable="false">Enter your phone no.</string>
    <string name="history__title">History</string>
    <string name="app__slogan">Buy and Sell used books, notes and study material</string>
    <string name="title__activity_user_history_list">UserHistoryListActivity</string>
    <string name="default_currency" translatable="false">Favourites</string>
    <string name="favourite__title">Favourites</string>
    <string name="fb_register__welcome">Welcome from %1$s </string>
    <string name="fb_register__desc">Please login to use all features of application.</string>
    <string name="gallery__title">Gallery</string>
    <string name="gallery_image__gallery">Image Gallery</string>
    <string name="gallery_img__desc">Image Description</string>
    <string name="image_default__image">Default Image</string>
    <string name="app__app_name">Pustakey</string>
    <string name="app__ok">OK</string>
    <string name="app__cancel">Cancel</string>
    <string name="app__noti_open">Open</string>
    <string name="app__noti_new_message">New Message</string>
    <string name="app__drawer_open">Drawer Open</string>
    <string name="app__drawer_close">Drawer Close</string>
    <string name="menu__fb_login">Facebook Login</string>
    <string name="menu__comment_list">Comment List</string>
    <string name="menu__notification_list">Notification List</string>
    <string name="register__user_name">User Name</string>
    <string name="register__email">Email</string>
    <string name="register__password">Password</string>
    <string name="register__back_to_login">Already member ? Login</string>
    <string name="register__register">Register</string>
    <string name="register__new_account">Register New User Account</string>
    <string name="register__check_option">Are you agreement this privacy and policy?</string>
    <string name="forgot_password__title">Forgot Password</string>
    <string name="forgot_password__email">Email</string>
    <string name="forgot_password__back_to_login">Already member ? Login</string>
    <string name="forgot_password__password_recovery">Password Recovery</string>
    <string name="forgot_password__save">Save</string>
    <string name="forgot_password__send">Send</string>
    <string name="password_change__password">Password</string>
    <string name="password_change__save">Save</string>
    <string name="password_change__confirm_password">Confirm Password</string>
    <string name="password_change__password_change">Password Change</string>
    <string name="login__email">Email</string>
    <string name="login__header" translatable="false">Welcome Back</string>
    <string name="register__header" translatable="false">Welcome Back</string>
    <string name="login__password">Password</string>
    <string name="login__not_a_member_join_now">New here? Sign Up</string>
    <string name="login__forgot_your_password">Forgot password ?</string>
    <string name="login__login">SignIn</string>
    <string name="login__welcome_title">Welcome To Market Place</string>
    <string name="login__choice_text">OR</string>
    <string name="login__with_phone">SignIn with Phone</string>
    <string name="login__with_google">SignIn with Google</string>
    <string name="login__exception_error">There is something wrong.</string>
    <string name="login__failure_error">Authentication failed.</string>
    <string name="login__auth_email">This email is logged in with email and password. Please try to login with email and password.</string>
    <string name="login__auth_google">This email is logged in with Google. Please try to login with Google.</string>
    <string name="login__auth_facebook">This email is logged in with Facebook. Please try to login with Facebook.</string>
    <string name="login__fail">SignIn Failed</string>
    <string name="login__fail_account">Cannot SignIn your account</string>
    <string name="contact_us__name">Contact Name</string>
    <string name="contact_us__email">Contact Email</string>
    <string name="contact_us__message">Contact Message</string>
    <string name="contact_us__phone">Contact Phone</string>
    <string name="contact_us__submit">Submit</string>
    <string name="notification_setting__on_off">Notification Setting ( On/Off )</string>
    <string name="notification_setting__latest_message_from_system">Latest Message From System</string>
    <string name="notification__notification">Notification!</string>
    <string name="notification__title">Notification</string>
    <string name="notification_setting__title">Notification Setting</string>
    <string name="notification_detail__title">Notification Detail</string>
    <string name="notification__alert">Alert</string>
    <string name="notification__custom_alert">Notification</string>
    <string name="notification__custom_open">Open Item</string>
    <string name="language__english">English</string>
    <string name="language__arabic">Arabic</string>
    <string name="language__spanish">Spanish</string>
    <string name="language__language_change">Are you sure you want to change to %1$s?</string>
    <string name="language__title">Language</string>
    <string name="shipping_address" translatable="false">Enter your Shipping address</string>
    <string name="pay_to_seller" translatable="false">Pay</string>
    <string name="comment__replies">-- %1$s replies</string>
    <string name="comment__dates">-- %1$s </string>
    <string name="comment__title">Comment List</string>
    <string name="comment__detail_title">Comment Replies</string>
    <string name="comment__empty_comment">Comment is Empty.</string>
    <string name="comment__comment">Comment</string>
    <string name="rating__list">Rating List</string>
    <string name="rating__write_review">Write Review</string>
    <string name="rating__total_count">%1$s Customer Reviews</string>
    <string name="rating__total_value">%1$s out of 5 stars</string>
    <string name="rating__total_count_n_value">%1$s out of 5 stars (%2$s Reviews)</string>
    <string name="rating__count">%1$s star</string>
    <string name="rating__percent">%1$s %%</string>
    <string name="rating__in_stock">In Stock</string>
    <string name="rating__title">Title</string>
    <string name="rating__message">Message</string>
    <string name="rating__user_rating">User Rating Entry !</string>
    <string name="rating__your_rating">Your Rating</string>
    <string name="rating__five_star">5 star</string>
    <string name="rating__four_star">4 star</string>
    <string name="rating__three_star">3 star</string>
    <string name="rating__two_star">2 star</string>
    <string name="rating__one_star">1 star</string>
    <string name="rating__rating_range">Rating Range</string>
    <string name="rating__one">1 and higher</string>
    <string name="rating__two">2 and higher</string>
    <string name="rating__three">3 and higher</string>
    <string name="rating__four">4 and higher</string>
    <string name="rating__five">5 \n</string>
    <string name="rating__comar">","</string>
    <string name="rating_value">rating</string>
    <string name="rating_city_value">rating</string>
    <string name="dialog__title_m_mun">Sorting</string>
    <string name="popular__m_mun">Popular</string>
    <string name="recent__m_mun">Latest</string>
    <string name="char_asc__m_mun">A -> Z</string>
    <string name="char_desc__m_mun">Z -> A</string>
    <string name="edit_setting__notification_setting">Notification Setting</string>
    <string name="edit_setting__edit_profile">Edit Profile</string>
    <string name="edit_setting__logout">Logout</string>
    <string name="edit_setting__logout_question">Are you sure to logout ? </string>
    <string name="edit_setting__terms_and_conditions">Terms and Conditions</string>
    <string name="edit_setting__app_info">App Info</string>
    <string name="edit_setting__title">Setting</string>
    <string name="tools__tracking">Track Your Order</string>
    <string name="tools__instruction">Instruction</string>
    <string name="tools__cart">Cart</string>
    <string name="message__register_success">Successfully Register.</string>
    <string name="message__loading">Loading…</string>
    <string name="message__please_wait">Please wait…</string>
    <string name="message__welcome">Welcome form Market Place</string>
    <string name="message__want_to_quit">Do you really want to quit?</string>
    <string name="message__ok_close">OK</string>
    <string name="message__cancel_close">Cancel</string>
    <string name="message__seller">Sellers</string>
    <string name="buyerDetails_name" translatable="false">Name</string>
    <string name="buyerDetails_primaryPhone" translatable="false">Phone no.</string>
    <string name="buyerDetails_alternatePhone" translatable="false">Alternate Phone no.</string>
    <string name="buyerDetails_Email" translatable="false">Email</string>
    <string name="buyerDetails_address" translatable="false">Address</string>
    <string name="buyerDetails_pincode" translatable="false">Pin Code</string>
    <string name="buyerDetails_city" translatable="false">City</string>
    <string name="buyerDetails_state" translatable="false">State</string>
    <string name="buyerDetails_country" translatable="false">Country</string>
    <string name="buyerDetails_submit" translatable="false">Submit</string>
    <string name="instruction_textHeader" translatable="false">INSTRUCTION
    <br />(for seller)
    </string>
    <string name="instruction_step1" translatable="false">

1.Insure that you put every books in the box which you have dealt with buyer, incase of missing of books or false book your amount will be deducted from dealt price.
  </string>
  <string name="instruction_step2" translatable="false">

        2. Use proper box or bag and pack it tightly for safety purpose download the labels from chatbox and fix it on the box .

    </string>
    <string name="instruction_step3" translatable="false">

 3. Our delivery executive will come to your home and will pick the books. Once book Will be delivered to the buyer you will recieve payment on your bank account.
    </string>
    <string name="instruction_step4" translatable="false">

        4. As per our buisness policy we will deduct 18% of the total amount from your dealt price.</string>
</resources>